--- a/public/foxxcyber-risk-assessment-tool.html
+++ b/public/foxxcyber-risk-assessment-tool.html
@@ -823,8 +823,7 @@
     <header>
         <div class="container">
             <div class="header-logo">
-                <h1>NIST <span>RMF Manager</span></h1>
-                <div class="tagline">Standalone Assessment Tool</div>
+                <h1>Foxx Cyber <span> Advanced Risk Assessment</span></h1>
             </div>
         </div>
     </header>
